Tillåt inte word wrap på texttvsida, fixar lite safari-radbrytning

--- a/src/App.css
+++ b/src/App.css
@@ -108,6 +108,7 @@
 }
 .TextTVPage .root {
   white-space: pre;
+  word-wrap: initial;
 }
 .TextTVPage .root .toprow {
   color: #ddd;
